WIP MDEV-32898 Phantom rows caused by updates of PRIMARY KEY

lock_clust_rec_read_check_and_lock(): If the current transaction has
a read view where the record is not visible, fail before
trying to acquire a lock.

FIXME: Use a different error code instead of reporting a deadlock?

FIXME: What to do about the disabled tests:
innodb.innodb_bug14007649 innodb.innodb-isolation